# bmi-c-extensions

./: .gitignore  CMakeLists.txt  README.md  extendedbmi.pc.in
.github/workflows/: cmake-multi-platform.yml
include/: bmi_extensions.h  extra_extension.h
src/: bmi_extensions.c  extra_extension.c
test/: CMakeLists.txt  test_extra.c  utility.h
test/test_bmi_c/: CMakeLists.txt  README.md
test/test_bmi_c/include/: bmi_test_bmi_c.h
test/test_bmi_c/src/: bmi_test_bmi_c.c
